# fauthy

./: .gitignore  README.md  pyproject.toml
fauthy/: LICENSE  __init__.py  jwtbearer.py  permissions.py
